--- a/Website.html
+++ b/Website.html
@@ -1,10 +1,14 @@
+<!doctype html>
+
 <html>
-<body>
-<h1>
-  Hoi
-  </h1>
-  <p>
-    SONJAAAA!
-  </p>
-</body>
+  <head>
+  <link type="text/css" rel="stylesheet" href="Website.css">
+  </head>
+  
+  <body>
+
+  
+  
+  
+  </body>
 </html>
