--- a/Website.html
+++ b/Website.html
@@ -22,11 +22,13 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="shortcut icon" href="images/favicon.ico">
   </head>
-  
   <body>
-
-  
-  
-  
+	<ul>
+	<li><a href="#HOME">HOME</a></li>
+	<li><a href="#TABLETS">TABLETS</a></li>
+	<li><a href="#TELEFOONS">TELEFOONS</a></li>
+	<li><a href="#CONTACT">CONTACT</a></li>
+	<li><a href="#OVER ONS">OVER ONS</a></li>
+	</ul>
   </body>
 </html>
