--- a/Website.html
+++ b/Website.html
@@ -1,10 +1,12 @@
 <html>
 <body>
 <h1>
-  Hoi
+  Tablets in de Zorg
   </h1>
-  <p>
-    SONJAAAA!
-  </p>
+  <p1>
+Hoe worden Tablets in de zorg gebruikt
+  </p1>
+  <br/.>
+  <p2>Voordelen</p2>
 </body>
 </html>
