--- a/Contact.html
+++ b/Contact.html
@@ -22,6 +22,23 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="shortcut icon" href="images/favicon.ico">
 </head>
+  
 <body>
+ <div class="contact-form">
+   <form id="contact-form" method="post" action="">
+     <input name="name" type="text" class="form-control" placeholder="Uw Naam" required>
+     <br>
+     <input name="email" type="email" class="form-control" placeholder="Uw Email" required>
+     <br>
+     <textarea name="message" class="form-control" placeholder="Bericht" row="4" required></textarea>
+     <br>
+     <input type="submit" class="form-control submit" value="SEND MESSAGE"
+           
+            </form>     
+  </div>
+  
+  
+  
+  
 </body>
 </html>
