--- a/Contact.html
+++ b/Contact.html
@@ -1,44 +1,263 @@
 <!doctype html>
 <html>
-<head>
-<link type="text/css" rel="stylesheet" href="Website.css">
+	<head>
+		<link type="text/css" rel="stylesheet" href="Website.css">
+		<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+		<link rel="manifest" href="images/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+		<link rel="shortcut icon" href="images/favicon.ico">
+	</head>
+	  
+	<body>
+		<ul width="100%" class="nav">
+			<li class="padding"><img class="img"src="images/ms-icon-70x70.png"></li>
+			<li class="padding"><input  type="text" placeholder="Search..."></li>
+			<li class="padding"><button><a href="Contact.html"><img class="contactimg" src="images/Contacts-icon.png"></a></button></li>
+		</ul>
+		<ul width="100%" class="nav">
+			<li class="lit"><a href="Website.html">HOME</a></li>
+			<li class="lit"><a href="Tablets.html">TABLETS</a></li>
+			<li class="lit"><a href="Telefoons.html">TELEFOONS</a></li>
+			<li class="lit"><a href="Contact.html">CONTACT</a></li>
+			<li class="lit"><a href="OverOns.html">OVER ONS</a></li>
+		</ul>
 
-<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-<link rel="manifest" href="images/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
-<link rel="shortcut icon" href="images/favicon.ico">
-</head>
-  
-<body>
- <div class="contact-form">
-   <form id="contact-form" method="post" action="">
-     <input name="name" type="text" class="form-control" placeholder="Uw Naam" required>
-     <br>
-     <input name="email" type="email" class="form-control" placeholder="Uw Email" required>
-     <br>
-     <textarea name="message" class="form-control" placeholder="Bericht" row="4" required></textarea>
-     <br>
-     <input type="submit" class="form-control submit" value="SEND MESSAGE"
-           
-            </form>     
-  </div>
-  
-  
-  
-  
-</body>
+
+	  
+		<form>
+			<fieldset class="fieldsett">
+				<legend><h1 class="contacth1">Contact Us Here:</h1></legend>
+				<label for="naam" class="label">Naam:</label><input name="naam" type="text" class="input" placeholder="Uw Naam" required><br>
+				<label for="email" class="label">Email:</label><input name="email" type="email" class="input" placeholder="Uw Email" required><br>
+				<label for="telefoon" class="label">Telefonnummner:</label><input name="telefoon" type="telefoon" class="input" placeholder="06-1234-5678" pattern="[0-9]{2}-[0-9]{4}-[0-9]{4}" required><br>
+				<label for="land" class="label">Land:</label><input name="land" list="land" type="text" class="input" placeholder="Uw Land" required><br>
+				<datalist id="land">
+					<option value="Afghanistan" />
+					<option value="Albania" />
+					<option value="Algeria" />
+					<option value="American Samoa" />
+					<option value="Andorra" />
+					<option value="Angola" />
+					<option value="Anguilla" />
+					<option value="Antarctica" />
+					<option value="Antigua and Barbuda" />
+					<option value="Argentina" />
+					<option value="Armenia" />
+					<option value="Aruba" />
+					<option value="Australia" />
+					<option value="Austria" />
+					<option value="Azerbaijan" />
+					<option value="Bahamas" />
+					<option value="Bahrain" />
+					<option value="Bangladesh" />
+					<option value="Barbados" />
+					<option value="Belarus" />
+					<option value="Belgium" />
+					<option value="Belize" />
+					<option value="Benin" />
+					<option value="Bermuda" />
+					<option value="Bhutan" />
+					<option value="Bolivia" />
+					<option value="Bosnia and Herzegovina" />
+					<option value="Botswana" />
+					<option value="Bouvet Island" />
+					<option value="Brunei Darussalam" />
+					<option value="Bulgaria" />
+					<option value="Burkina Faso" />
+					<option value="Burundi" />
+					<option value="Cambodia" />
+					<option value="Cameroon" />
+					<option value="Canada" />
+					<option value="Cape Verde" />
+					<option value="Chad" />
+					<option value="Chile" />
+					<option value="China" />
+					<option value="Colombia" />
+					<option value="Comoros" />
+					<option value="Congo" />
+					<option value="Costa Rica" />
+					<option value="Cote D'ivoire" />
+					<option value="Croatia" />
+					<option value="Cuba" />
+					<option value="Cyprus" />
+					<option value="Czech Republic" />
+					<option value="Denmark" />
+					<option value="Djibouti" />
+					<option value="Dominica" />
+					<option value="Dominican Republic" />
+					<option value="Ecuador" />
+					<option value="Egypt" />
+					<option value="El Salvador" />
+					<option value="Equatorial Guinea" />
+					<option value="Eritrea" />
+					<option value="Estonia" />
+					<option value="Ethiopia" />
+					<option value="Fiji" />
+					<option value="Finland" />
+					<option value="France" />
+					<option value="Gabon" />
+					<option value="Gambia" />
+					<option value="Georgia" />
+					<option value="Germany" />
+					<option value="Ghana" />
+					<option value="Gibraltar" />
+					<option value="Greece" />
+					<option value="Greenland" />
+					<option value="Grenada" />
+					<option value="Guadeloupe" />
+					<option value="Guam" />
+					<option value="Guatemala" />
+					<option value="Guinea" />
+					<option value="Guinea-bissau" />
+					<option value="Guyana" />
+					<option value="Haiti" />
+					<option value="Honduras" />
+					<option value="Hong Kong" />
+					<option value="Hungary" />
+					<option value="Iceland" />
+					<option value="India" />
+					<option value="Indonesia" />
+					<option value="Iran" />
+					<option value="Iraq" />
+					<option value="Ireland" />
+					<option value="Israel" />
+					<option value="Italy" />
+					<option value="Jamaica" />
+					<option value="Japan" />
+					<option value="Jordan" />
+					<option value="Kazakhstan" />
+					<option value="Kenya" />
+					<option value="Kiribati" />
+					<option value="Korea" />
+					<option value="Kuwait" />
+					<option value="Kyrgyzstan" />
+					<option value="Lao People's Democratic Republic" />
+					<option value="Latvia" />
+					<option value="Lebanon" />
+					<option value="Lesotho" />
+					<option value="Liberia" />
+					<option value="Liechtenstein" />
+					<option value="Lithuania" />
+					<option value="Luxembourg" />
+					<option value="Macao" />
+					<option value="Macedonia" />
+					<option value="Madagascar" />
+					<option value="Malawi" />
+					<option value="Malaysia" />
+					<option value="Maldives" />
+					<option value="Mali" />
+					<option value="Malta" />
+					<option value="Martinique" />
+					<option value="Mauritania" />
+					<option value="Mauritius" />
+					<option value="Mayotte" />
+					<option value="Mexico" />
+					<option value="Moldova" />
+					<option value="Monaco" />
+					<option value="Mongolia" />
+					<option value="Montserrat" />
+					<option value="Morocco" />
+					<option value="Mozambique" />
+					<option value="Myanmar" />
+					<option value="Namibia" />
+					<option value="Nauru" />
+					<option value="Nepal" />
+					<option value="Netherlands" />
+					<option value="Netherlands Antilles" />
+					<option value="New Caledonia" />
+					<option value="New Zealand" />
+					<option value="Nicaragua" />
+					<option value="Niger" />
+					<option value="Nigeria" />
+					<option value="Niue" />
+					<option value="Norfolk Island" />
+					<option value="Norway" />
+					<option value="Oman" />
+					<option value="Pakistan" />
+					<option value="Palau" />
+					<option value="Panama" />
+					<option value="Papua New Guinea" />
+					<option value="Paraguay" />
+					<option value="Peru" />
+					<option value="Philippines" />
+					<option value="Pitcairn" />
+					<option value="Poland" />
+					<option value="Portugal" />
+					<option value="Puerto Rico" />
+					<option value="Qatar" />
+					<option value="Reunion" />
+					<option value="Romania" />
+					<option value="Russian Federation" />
+					<option value="Rwanda" />
+					<option value="Saint Helena" />
+					<option value="Saint Kitts and Nevis" />
+					<option value="Saint Lucia" />
+					<option value="Saint Pierre and Miquelon" />
+					<option value="Samoa" />
+					<option value="San Marino" />
+					<option value="Sao Tome and Principe" />
+					<option value="Saudi Arabia" />
+					<option value="Senegal" />
+					<option value="Serbia and Montenegro" />
+					<option value="Seychelles" />
+					<option value="Sierra Leone" />
+					<option value="Singapore" />
+					<option value="Slovakia" />
+					<option value="Slovenia" />
+					<option value="Somalia" />
+					<option value="South Africa" />
+					<option value="Spain" />
+					<option value="Sri Lanka" />
+					<option value="Sudan" />
+					<option value="Suriname" />
+					<option value="Svalbard and Jan Mayen" />
+					<option value="Swaziland" />
+					<option value="Sweden" />
+					<option value="Switzerland" />
+					<option value="Syrian Arab Republic" />
+					<option value="Taiwan" />
+					<option value="Tajikistan" />
+					<option value="Thailand" />
+					<option value="Timor-leste" />
+					<option value="Togo" />
+					<option value="Tokelau" />
+					<option value="Tonga" />
+					<option value="Trinidad and Tobago" />
+					<option value="Tunisia" />
+					<option value="Turkey" />
+					<option value="Turkmenistan" />
+					<option value="Tuvalu" />
+					<option value="Uganda" />
+					<option value="Ukraine" />
+					<option value="United Kingdom" />
+					<option value="United States" />
+					<option value="Uruguay" />
+					<option value="Uzbekistan" />
+					<option value="Vanuatu" />
+					<option value="Venezuela" />
+					<option value="Viet Nam" />
+					<option value="Yemen" />
+					<option value="Zambia" />
+					<option value="Zimbabwe" />
+				</datalist><br>
+				<br>
+				<button input type="submit" class="form-control submit" value="SEND MESSAGE">SEND</button>
+		</fieldset>
+		</form>
+	 
+	</body>
 </html>
