--- a/Contact.html
+++ b/Contact.html
@@ -20,27 +20,23 @@
 		<meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 		<link rel="shortcut icon" href="images/favicon.ico">
-	</head>
-	  
+	</head>  
 	<body>
 		<ul width="100%" class="nav">
 			<li class="padding"><img class="img"src="images/ms-icon-70x70.png"></li>
-			<li class="padding"><input  type="text" placeholder="Search..."></li>
-			<li class="padding"><button><a href="Contact.html"><img class="contactimg" src="images/Contacts-icon.png"></a></button></li>
+			<li class="padding"><input type="text" placeholder="Zoeken..."></li>
+			<li class="padding"><button><a class="a" href="Contact.html"><img class="contactimg" src="images/Contacts-icon.png"></a></button></li>
 		</ul>
-		<ul width="100%" class="nav">
-			<li class="lit"><a href="Website.html">HOME</a></li>
-			<li class="lit"><a href="Tablets.html">TABLETS</a></li>
-			<li class="lit"><a href="Telefoons.html">TELEFOONS</a></li>
-			<li class="lit"><a href="Contact.html">CONTACT</a></li>
-			<li class="lit"><a href="OverOns.html">OVER ONS</a></li>
+			<ul width="100%" class="nav">
+			<li class="lit"><a class="a" href="Website.html">HOME</a></li>
+			<li class="lit"><a class="a" href="Tablets.html">TABLETS</a></li>
+			<li class="lit"><a class="a" href="Telefoons.html">TELEFOONS</a></li>
+			<li class="lit"><a class="a" href="Contact.html">CONTACT</a></li>
+			<li class="lit"><a class="a" href="OverOns.html">OVER ONS</a></li>
 		</ul>
-
-
-	  
 		<form>
 			<fieldset class="fieldsett">
-				<legend><h1 class="contacth1">Contact Us Here:</h1></legend>
+				<legend><h1 class="contacth1">Contact</h1></legend>
 				<label for="naam" class="label">Naam:</label><input name="naam" type="text" class="input" placeholder="Uw Naam" required><br>
 				<label for="email" class="label">Email:</label><input name="email" type="email" class="input" placeholder="Uw Email" required><br>
 				<label for="telefoon" class="label">Telefonnummner:</label><input name="telefoon" type="telefoon" class="input" placeholder="06-1234-5678" pattern="[0-9]{2}-[0-9]{4}-[0-9]{4}" required><br>
@@ -255,9 +251,21 @@
 					<option value="Zimbabwe" />
 				</datalist><br>
 				<br>
-				<button input type="submit" class="form-control submit" value="SEND MESSAGE">SEND</button>
-		</fieldset>
+				<button input type="submit" class="form-control submit" value="SEND MESSAGE">Verzenden</button>
+			</fieldset><br>
 		</form>
-	 
+		<div class="footer">
+			<table>
+				<tr>
+					<td class="paddingg">&#64 2019 - Floor & Anahita</td>
+					<td>
+						<ul class="navv">
+							<li class="litt"><a class="a" href="Contact.html">Contact</a></li>
+							<li class="litt"><a class="a" href="OverOns.html">Over Ons</a></li>
+						</ul>
+					</td>
+				</tr>
+			<table>
+		</div>
 	</body>
 </html>
