--- a/OverOns.html
+++ b/OverOns.html
@@ -24,36 +24,48 @@
 	<body>
 		<ul width="100%" class="nav">
 			<li class="padding"><img class="img"src="images/ms-icon-70x70.png"></li>
-			<li class="padding"><input  type="text" placeholder="Search..."></li>
-			<li class="padding"><button><a href="Contact.html"><img class="contactimg" src="images/Contacts-icon.png"></a></button></li>
+			<li class="padding"><input type="text" placeholder="Zoeken..."></li>
+			<li class="padding"><button><a class="a" href="Contact.html"><img class="contactimg" src="images/Contacts-icon.png"></a></button></li>
 		</ul>
-			<ul width="100%" class="nav">
-			<li class="lit"><a href="Website.html">HOME</a></li>
-			<li class="lit"><a href="Tablets.html">TABLETS</a></li>
-			<li class="lit"><a href="Telefoons.html">TELEFOONS</a></li>
-			<li class="lit"><a href="Contact.html">CONTACT</a></li>
-			<li class="lit"><a href="OverOns.html">OVER ONS</a></li>
+		<ul width="100%" class="nav">
+			<li class="lit"><a class="a" href="Website.html">HOME</a></li>
+			<li class="lit"><a class="a" href="Tablets.html">TABLETS</a></li>
+			<li class="lit"><a class="a" href="Telefoons.html">TELEFOONS</a></li>
+			<li class="lit"><a class="a" href="Contact.html">CONTACT</a></li>
+			<li class="lit"><a class="a" href="OverOns.html">OVER ONS</a></li>
 		</ul>
-			
-		
-	<fieldset class="fieldsettt">
-		<legend><h1 class="contacth1">Hier kunt u meer informatie vinden over de ontwikkelaars van deze website:</h1></legend>
-			<ol >
-				<li> Floor Bloemers
-					<ul>
-						<li class="info">School: Sint-Maartenscollege Voorburg</li>
-						<li class="info">Email: 110268@st-maartenscollege.nl</li>
-						<li class="info">Role: Programmeur, Co-Auteur</li>
+		<fieldset class="contentfieldset">
+			<legend><h1 class="contacth1">Over Ons</h1></legend>
+			<h3>Hier kunt u meer informatie vinden over de ontwikkelaars van deze website:</h3>
+			<ol>
+				<li><h4>Floor Bloemers</h4>
+					<ul class="info">
+						<li>School: Sint-Maartenscollege Voorburg</li>
+						<li>Email: 110268@st-maartenscollege.nl</li>
+						<li>Role: Programmeur, Co-Auteur</li>
 					</ul>
 				</li><br>
-				<li> Anahita Nazari
-					<ul>
-						<li class="info">School: Sint-Maartenscollege Voorburg</li>
-						<li class="info">Email: 110268@st-maartenscollege.nl</li>
-						<li class="info">Role: Auteur, Co-Programmeur</li>
+				<li><h4>Anahita Nazari</h4>
+					<ul  class="info">
+						<li>School: Sint-Maartenscollege Voorburg</li>
+						<li>Email: 110268@st-maartenscollege.nl</li>
+						<li>Role: Auteur, Co-Programmeur</li>
 					</ul>
 				</li>
 			</ol>
-	</fieldset>
+		</fieldset><br>
+		<div class="footer">
+			<table>
+				<tr>
+					<td class="paddingg">&#64 2019 - Floor & Anahita</td>
+					<td>
+						<ul class="navv">
+							<li class="litt"><a class="a" href="Contact.html">Contact</a></li>
+							<li class="litt"><a class="a" href="OverOns.html">Over Ons</a></li>
+						</ul>
+					</td>
+				</tr>
+			<table>
+		</div>
 	</body>
 </html>
