--- a/Website.html
+++ b/Website.html
@@ -24,22 +24,62 @@
 	<body>
 		<ul class="nav">
 			<li class="padding"><img class="img"src="images/ms-icon-70x70.png"></li>
-			<li class="padding"><input  type="text" placeholder="Search..."></li>
-			<li class="padding"><button><a href="Contact.html"><img class="contactimg" src="images/Contacts-icon.png"></a></button></li>
+			<li class="padding"><input type="text" placeholder="Zoeken..."></li>
+			<li class="padding"><button><a class="a" href="Contact.html"><img class="contactimg" src="images/Contacts-icon.png"></a></button></li>
 		</ul>
 		<ul class="nav">
-			<li class="lit"><a href="Website.html">HOME</a></li>
-			<li class="lit"><a href="Tablets.html">TABLETS</a></li>
-			<li class="lit"><a href="Telefoons.html">TELEFOONS</a></li>
-			<li class="lit"><a href="Contact.html">CONTACT</a></li>
-			<li class="lit"><a href="OverOns.html">OVER ONS</a></li>
+			<li class="lit"><a class="a" href="Website.html">HOME</a></li>
+			<li class="lit"><a class="a" href="Tablets.html">TABLETS</a></li>
+			<li class="lit"><a class="a" href="Telefoons.html">TELEFOONS</a></li>
+			<li class="lit"><a class="a" href="Contact.html">CONTACT</a></li>
+			<li class="lit"><a class="a" href="OverOns.html">OVER ONS</a></li>
 		</ul>
+		<fieldset class="contentfieldset">
+			<legend><h1 class="contacth1">Home</h1></legend>
+			<table class="table">
+				<caption><h1>Welkom op de website van IT in de zorg!</h1></caption>
+				<thead>
+					<td><h2>Tablets in de zorg</h2></td>
+					<td><h2>Telefoons in de zorg</h2></td>
+				</thead>
+				<tbody>
+					<tr> 
+						<td width="50%">
+							<p>
+								Door middel van tablets in de zorg kunnen artsen en andere verzorgers makkelijk en veilig de dossiers van de cliënten zien.
+								Dit is heel handig want ze krijgen een goed beeld van wat er mis is zonder ook maar hun plek te verlaten.
+								Daarnaast kunnen ze herhaalrecepten ook gewoon met de tablet bestellen. Door deze redenen kunnen tablets vooral senioren...
+								<a class="leesmeer" href="Tablets.html">Lees meer</a>
+							</p>
+						</td>
+						<td width="50%">
+							<p>
+								Iets wat niet veel mensen weten is dat er in app stores duizenden apps aangeboden worden op het gebied van gezondheidszorg en het aantal groeit.
+								Deze apps kunnen voor alles zijn. Er zijn apps zoals de Apotheek app waar je informatie kunt krijgen over medicijnen. 
+								Maar ook apps die bijvoorbeeld je helpen door oefeningen te geven...
+								<a class="leesmeer" href="Telefoons.html">Lees meer</a>
+							</p>
+						</td>
+					</tr>
+					<tr> 
+						<td align="center" width="50%"><img class="homeimg" src="images/data-on-tablet.jpg"></td>
+						<td align="center" width="50%"><img class="homeimg" src="images/mobile-phone-data-main-1.jpg"></td>
+					</tr>
+				</tbody>
+			</table> 
+		</fieldset><br>
 		<div class="footer">
-			<ul class="nav">
-				<li class="litt">© 2019 Floor & Anahita</li>
-				<li class="litt"><a href="Contact.html">Contact</a></li>
-			</ul>
+			<table>
+				<tr>
+					<td class="paddingg">&#64 2019 - Floor & Anahita</td>
+					<td>
+						<ul class="navv">
+							<li class="litt"><a class="a" href="Contact.html">Contact</a></li>
+							<li class="litt"><a class="a" href="OverOns.html">Over Ons</a></li>
+						</ul>
+					</td>
+				</tr>
+			<table>
 		</div>
-
 	</body>
 </html>
